# eucalyptus-ansible

./: Makefile.in  README.md  configure.ac  eucalyptus-ansible.spec
faststart/: faststart.sh
